Fix spacing between card image and content

--- a/assets/css/components/card.css
+++ b/assets/css/components/card.css
@@ -52,7 +52,7 @@
 	gap: var(--vb-fifths);
 }
 
-.Card__image + .Card__content {
+:where(picture, .Card__image) + .Card__content {
 	padding-block-start: var(--vb-third);
 }
 
